# groundup-ai-fullstack-test-mar-2026

./: .dockerignore  .gitignore  .infisical.json  AGENTS.md  DASHBOARD.md  README.md  bts.jsonc  docker-compose.yml  lefthook.yml  mise.toml  package.json  pyproject.toml  turbo.json
.beads/: issues.jsonl
apps/server/: .env.example  .gitignore  Dockerfile  MIGRATION_GUIDE.md  alembic.ini  groundup.db  package.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0a412b99977d_initial_postgres_uuid_timescale.py  1f0f7c9f4a21_schema_v2_settings_and_alert_links.py  69333faeabcc_initial_migration_alerts_reasons_.py  b1c2d3e4f5a6_add_baseline_sound_clip_to_machines.py  c2d3e4f5a6b7_alerts_hypertable.py  d3e4f5a6b7c8_continuous_aggregates.py  e4f5a6b7c8d9_ca_realtime.py  f5a6b7c8d9e0_ca_resolved_logic.py
apps/server/app/: database.py  main.py  models.py
apps/server/app/api/: main.py
apps/server/app/api/routes/: alerts.py  analytics.py  lookup.py  utils.py
apps/server/app/core/: config.py  db.py
apps/server/app/routes/: alerts.py  lookup.py
apps/server/app/schemas/: __init__.py  alerts.py  analytics.py  lookup.py
apps/server/app/scripts/: seed.py  seed_dev.py
apps/server/app/services/: __init__.py  bootstrap.py  media.py  storage.py
apps/server/tests/: conftest.py  factories.py  test_api_endpoints.py  test_lookup_schemas.py  test_schemas.py
apps/server/tests/integration/: test_alert_update_validation.py  test_api_endpoints.py
apps/server/tests/unit/: test_media_service.py
docs/: architecture.md  data-pipeline.md  (+1 more)
(+93 files in other folders)
