[project]
name = "server"
version = "0.1.0"
description = "GroundUp AI Anomaly Detection API"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.30.0",
  "uuid-utils>=0.10.0",
  "python-multipart>=0.0.20",
  "librosa>=0.11.0",
  "matplotlib>=3.10.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "alembic>=1.15.0",
  "python-dotenv>=1.0.0",
  "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
  "ty>=0.0.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
